site/etalab/schema-irve/2.0.1/CHANGELOG.md
<MenuSchema />

<MenuSchema />

# Changements

## 2.0.1

- Mise à jour du texte et de liens relatifs à la procédure de consolidation réalisée par Etalab

## 2.0.0

Mise à jour du schéma suite aux

- [Décret n° 2021-546 du 4 mai 2021 portant modification du décret n° 2017-26 du 12 janvier 2017 relatif aux infrastructures de recharge pour véhicules électriques et portant diverses mesures de transposition de la directive 2014/94/UE du Parlement européen et du Conseil du 22 octobre 2014 sur le déploiement d'une infrastructure pour carburants alternatifs](https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000043475363)
- [Arrêté du 4 mai 2021 relatif aux données concernant la localisation géographique et les caractéristiques techniques des stations et des points de recharge pour véhicules électriques](https://www.legifrance.gouv.fr/jorf/id/JORFTEXT000043475441)

[#9](https://github.com/etalab/schema-irve/pull/9)

## 1.0.3

- Suppression du caractère obligatoire du champ `observations`

## 1.0.2

Changements internes :
- utilisation des [métadonnées standardisées](https://github.com/frictionlessdata/specs/blob/master/specs/patterns.md#table-schema-metadata-properties)

## 1.0.0 -> 1.0.1

Changements pour intégration au SCDL :
  - ajout des fichiers `CONTEXT.md`, `SEE_ALSO.md` et `CHANGELOG.md`
  - ajout de la propriété `uri`
  - modification du titre
